Remove top spacing no longer necessary in order summary quantity badge

--- a/assets/js/base/components/cart-checkout/order-summary/style.scss
+++ b/assets/js/base/components/cart-checkout/order-summary/style.scss
@@ -62,7 +62,7 @@
 	justify-content: center;
 	min-width: 20px;
 	right: 0;
-	top: $gap;
+	top: 0;
 	transform: translate(50%, -50%);
 	white-space: nowrap;
 	z-index: 1;
